<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditNotesActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_back"
        app:menu="@menu/notes_menu"
        app:title="@string/edit_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:hint="@string/enter_title"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:textSize="26sp"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:maxLines="1" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:padding="8dp"
                android:textSize="16sp"
                android:hint="@string/enter_something"
                android:background="@android:color/transparent"
                android:inputType="textMultiLine"
                android:minLines="15" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>